syntax = "proto3";

package proto;
option go_package = "./;proto";


message EntityClientData {
  uint32 wind_change_scene_time = 1;
  float windmill_sync_angle = 2;
  int32 wind_change_target_level = 3;
}
