syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PropValue.proto";

message PropPair {
  uint32 type = 1;
  PropValue prop_value = 2;
}
