syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PlayerRTTInfo.proto";

message WorldPlayerRTTNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 24;
  }

  repeated PlayerRTTInfo player_rtt_list = 14;
}
